syntax = "proto3";

package com.smartmarket;

message InventoryUpdate {
    string product_id = 1;
    int32 current_quantity = 2;
}

message RestockSuggestion {
    string product_id = 1;
    int32 suggested_quantity = 2;
}

service InventoryManagement2 {
    rpc BiDirectionalInventoryUpdates(stream InventoryUpdate) returns (stream RestockSuggestion);
}
